# palindrome

./: AUTHORS  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  checkpalindrome.cpp
src/.deps/: checkpalindrome.Po
